<resources>
    <string name="app_name">Temperapp</string>
    <string name="google_map_api_key">AIzaSyB--Rcr1pkBT1GVZUC9al2uVKlzy44FeD0</string>
    <string name="weather_key">e09ac49beb2d17c3031769746ac59175</string>
    
    <string name="inputtemp">Digite a temperatura (em Celsius)</string>
    <string name="inputclima">Insira o clima</string>
    <string name="processtemp">Processar temperatura</string>
    <string name="temperatura">Temperatura</string>
    <string name="celsius">°C</string>
    <string name="kelvin">K</string>
    <string name="fahrenheit">°F</string>
    <string name="city">Minha cidade</string>

    <string-array name="climarray">
        <item>Ensolarado</item>
        <item>Parcialmente Nublado</item>
        <item>Muito Nublado</item>
        <item>Nublado</item>
        <item>Garoa</item>
        <item>Chuvoso</item>
        <item>Tempestade</item>
    </string-array>
</resources>