<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/clresult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/teal_200"
    android:padding="50dp"
    tools:context=".ResultActivity">

    <TextView
        android:id="@+id/resulttitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperatura"
        android:textSize="30dp"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageView
        android:id="@+id/imvresultclima"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/garoa"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/resulttitle" />
    <TextView
        android:id="@+id/tvresultclima"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imvresultclima"/>

    <TextView
        android:id="@+id/tvresulttemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="60sp"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvresultclima"/>

    <Button
        android:id="@+id/btncelsius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/celsius"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/round_border_selected"
        app:layout_constraintEnd_toStartOf="@id/btnfahrenheit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvresulttemp"/>
    <Button
        android:id="@+id/btnfahrenheit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/fahrenheit"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_border"
        app:layout_constraintEnd_toStartOf="@id/btnkelvin"
        app:layout_constraintStart_toEndOf="@id/btncelsius"
        app:layout_constraintTop_toBottomOf="@id/tvresulttemp"/>
    <Button
        android:id="@+id/btnkelvin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/kelvin"
        android:textColor="@color/white"
        android:background="@drawable/rounded_border"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnfahrenheit"
        app:layout_constraintTop_toBottomOf="@id/tvresulttemp"/>

</androidx.constraintlayout.widget.ConstraintLayout>